samples/_failures_safe/1761042324_2ecf7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_395ceba5.c: In function ‘main’:
./samples/SAFE/__tmp_395ceba5.c:177:26: error: missing terminating ' character
  177 |         input[len - 1] = '\0
      |                          ^~~
./samples/SAFE/__tmp_395ceba5.c:177:9: error: expected expression at end of input
  177 |         input[len - 1] = '\0
      |         ^~~~~
./samples/SAFE/__tmp_395ceba5.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_395ceba5.c:177:9: error: expected declaration or statement at end of input
